# rez_nushell_plugin

./: README.md  main.py  pyproject.toml  rez-completions.nu
.github/workflows/: test.yml
scripts/: rez-completion.nu
src/rez_nushell/rez_plugins/shell/: __init__.py  nu.py  nushell.py
src/rez_nushell/rezplugins/shell/: nu.py  rezconfig.py
tests/: test_nu.py
